--- a/templates/agents.j2
+++ b/templates/agents.j2
@@ -25,7 +25,7 @@
 <body onload="browseAgents()">
     <h1>Agents</h1>
     <h3>Add, edit, or delete an agent from the table</h3>
-    [ <a href="{{ url_for('root') }}">Home</a> | <a href="{{ url_for('agents') }}">Agents</a> | <a href="properties.html">Properties</a> | <a href="sellers.html">Sellers</a> | <a href="transactions.html">Transactions</a> | <a href="agent-property.html">Agent-Property</a> ]
+    [ <a href="{{ url_for('root') }}">Home</a> | <a href="{{ url_for('agents') }}">Agents</a> | <a href="properties.html">Properties</a> | <a href="sellers.html">Sellers</a> | <a href="transactions.html">Transactions</a> | <a href="{{ url_for('agent_listings') }}">Agent-Property</a> ]
     <div id="browse">
         <p><a href="#" onclick="newAgent()">Add Agent</a></p>
         <table border="1" cellpadding="5">
